--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,9 @@
   "private": true,
   "dependencies": {
     "bootstrap-sass": "~3.3.5",
-    "modernizr": "~2.8.1"
+    "modernizr": "~2.8.1",
+    "jquery": "~3.1.1",
+    "components-font-awesome": "^4.7.0"
   },
   "overrides": {
     "bootstrap-sass": {
